--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dot-env": "0.0.1",
     "graphql": "^15.5.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
